--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<div id="user-profile-card" class="col-sm-4">
+<div class="col-sm-4 user-profile-card">
   <% if logged_in? && @user == current_user %>
     <h1>Welcome, <%= @user.username %></h1>
     <a class="btn btn-primary" href="/tweets/new" role="button">New Tweet</a>
@@ -9,11 +9,11 @@
     <h4>Joined <%= @user.created_at.strftime "%B, %Y" %></h4>
 </div>
 
-<div id="user-tweets" class="col-sm-6">
+<div class="col-sm-6 tweet-feed">
   <h1>Tweets</h1>
   <% @user.tweets.order("created_at DESC").each do |tweet| %>
     <div class="tweet-card col-sm-12">
-      <p class="tweet-info"><%= tweet.created_at.localtime.strftime "%l:%M:%S%P %B %d, %Y" %></p>
+      <p class="tweet-info"><%= tweet.created_at.localtime.strftime "%l:%M:%S%P %B %d, %Y" %>  <a class="btn btn-default btn-xs" href="#">edit tweet</a></p>
       <p class="tweet-text"><%= tweet.content %></p>
     </div>
   <% end %>
