pass tests, show, edit, delete

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -12,9 +12,13 @@
 <div class="col-sm-6 tweet-feed">
   <h1>Tweets</h1>
   <% @user.tweets.order("created_at DESC").each do |tweet| %>
-    <div class="tweet-card col-sm-12">
-      <p class="tweet-info"><%= tweet.created_at.localtime.strftime "%l:%M:%S%P %B %d, %Y" %>  <a class="btn btn-default btn-xs" href="#">edit tweet</a></p>
-      <p class="tweet-text"><%= tweet.content %></p>
-    </div>
+  <div class="tweet-card col-sm-12">
+    <p class="tweet-info"><%= tweet.created_at.localtime.strftime "%l:%M:%S%P %B %d, %Y" %>  by <% if tweet.user == current_user %>
+      you
+    <% else %>
+      @<%= tweet.user.slug %>
+    <% end %> <a class="btn btn-default btn-xs" href="/tweets/<%= tweet.id %>">show</a></p>
+    <p class="tweet-text"><%= tweet.content %></p>
+  </div>
   <% end %>
 </div>
