--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -38,7 +38,7 @@
             <% if logged_in? %>
             <form class="navbar-form navbar-left" action="/tweets" method="post">
               <div class="form-group">
-                <input name="content" type="text" class="form-control" placeholder="Write your tweet here...">
+                <input name="tweet[content]" type="text" class="form-control" placeholder="Write your tweet here...">
               </div>
               <button type="submit" class="btn btn-default">Tweet</button>
             </form>
