--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -20,7 +20,7 @@
     </div>
     <div class="form-group fwitter-form-button">
       <div class="col-sm-8 col-sm-offset-2">
-        <button type="submit" class="btn btn-primary btn-block">Tweet</button>
+        <button type="submit" class="btn btn-primary btn-block">submit</button>
       </div>
     </div>
   </form>
