--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -12,7 +12,11 @@
   <h1>Your Feed</h1>
   <% Tweet.all.order("created_at DESC").each do |tweet| %>
     <div class="tweet-card col-sm-12">
-      <p class="tweet-info"><%= tweet.created_at.localtime.strftime "%l:%M:%S%P %B %d, %Y" %>  by <% if tweet.user == current_user %>you <a class="btn btn-default btn-xs" href="#">edit tweet</a><% else %>@<%= tweet.user.slug %><% end %></p>
+      <p class="tweet-info"><%= tweet.created_at.localtime.strftime "%l:%M:%S%P %B %d, %Y" %>  by <% if tweet.user == current_user %>
+        you
+      <% else %>
+        @<%= tweet.user.slug %>
+      <% end %> <a class="btn btn-default btn-xs" href="/tweets/<%= tweet.id %>">show</a></p>
       <p class="tweet-text"><%= tweet.content %></p>
     </div>
   <% end %>
