--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -15,18 +15,18 @@
     <div class="form-group">
       <!-- <label for="inputEmail3" class="col-sm-2 control-label">Email</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="email" name="email"class="form-control" id="inputEmail3" placeholder="Email">
+        <input type="text" name="email"class="form-control" placeholder="Email or Username">
       </div>
     </div>
     <div class="form-group">
       <!-- <label for="inputPassword3" class="col-sm-2 control-label">Password</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="password" name="password"class="form-control" id="inputPassword3" placeholder="Password">
+        <input type="password" name="password"class="form-control" placeholder="Password">
       </div>
     </div>
     <div class="form-group fwitter-form-button">
       <div class="col-sm-8 col-sm-offset-2">
-        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+        <button type="submit" class="btn btn-primary btn-block">Log In</button>
       </div>
     </div>
   </form>
