--- a/public/css/main.css
+++ b/public/css/main.css
@@ -16,6 +16,7 @@
 
 .tweet-card {
   border: 0.5px solid #8888FF;
+  padding: 0.5em;
   margin-top: 0.25em;
   margin-bottom: 0.25em;
   border-radius: 5px;
@@ -39,4 +40,8 @@
 
 .tweet-feed {
   /*margin-left: 2em;*/
+}
+
+#tweet-delete-cancel {
+  margin-right: .5em;
 }
