add back button to show_tweet

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -30,3 +30,7 @@
     <p class="tweet-text"><%= @tweet.content %></p>
   </div>
 </div>
+
+<div class="back-button col-sm-8 col-sm-offset-2">
+  <a class="btn btn-primary btn-block" href="javascript:history.back()">Back</a>
+</div>
