protect tweets from nefarious editing

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -32,5 +32,5 @@
 </div>
 
 <div class="back-button col-sm-8 col-sm-offset-2">
-  <a class="btn btn-primary btn-block" href="javascript:history.back()">Back</a>
+  <a class="btn btn-primary btn-block" href="/tweets">Back</a>
 </div>
