--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -15,7 +15,7 @@
     <div class="form-group">
       <!-- <label for="inputEmail3" class="col-sm-2 control-label">Email</label> -->
       <div class="col-sm-8 col-sm-offset-2">
-        <input type="text" name="email"class="form-control" placeholder="Email or Username">
+        <input type="text" name="email"class="form-control" placeholder="Email">
       </div>
     </div>
     <div class="form-group">
