--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,8 +1,7 @@
 <h1>Fwitter Signup!</h1>
 <form method="POST" action="/signup">
-<h3>Email: <input type="text" name="email" id="email"></h3>
-<h3>Username: <input type="text" name="username" id="username"></h3>
-<h3>Password: <input type="text" name="password" id="password"></h3>
+<h3>Email: <input type="text" name="email" id="email" placeholder="Email"></h3>
+<h3>Username: <input type="text" name="username" id="username" placeholder="Username"></h3>
+<h3>Password: <input type="text" name="password" id="password" placeholder="Password"></h3>
 <input type="submit" name="Register" value="Register">
 </form>
- 
