--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,6 +2,5 @@
 <form method="POST" action="/login">
 <h3>Username: <input type="text" name="username" id="username"></h3>
 <h3>Password: <input type="text" name="password" id="password"></h3>
-<input type="submit" name="Log In" value="Log In">
+<input type="submit" name="submit" value="submit">
 </form>
- 
