--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,12 +1,17 @@
-<h1>Welcome, <%=@user.username%>!<h1>
+<%if logged_in?%> <h1>Welcome, <%=@user.username%>!</h1>
+<%else%> <h1><%="#{@user.username} @Fwitter"%> </h1> <%end%>
 ________________________________________
 
 <%if logged_in?%>
-<%@tweets.each do |tweet|%>
-<p><%= tweet.content %></p>
+<%Tweet.all.each do |tweet|%>
+<h3><p><%= "#{tweet.user.username}: \"#{tweet.content}\"" %></p></h3>
+<input type="submit" name="Like" value="Like"> <input type="submit" name="Comment" value="Comment"> <input type="submit" name="Refweet" value="Refweet"><br>
 ________________________________________
 <%end%>
-
 <%else%>
-You aren't logged in, loser!
+<%@user.tweets.each do |tweet|%>
+<h3><p><%= "#{tweet.user.username}: \"#{tweet.content}\"" %></p></h3>
+<input type="submit" name="Like" value="Like"> <input type="submit" name="Comment" value="Comment"> <input type="submit" name="Refweet" value="Refweet"><br>
+________________________________________
+<%end%>
 <%end%>
