--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,6 +4,6 @@ _______________________________________________________<br></br><br>
 
 <form method="POST" action="/tweets" id="new_tweet">
 <textarea name="content" form="new_tweet" placeholder="80 characters or less...." rows="6" cols="60"></textarea><br><br>
-<input type="submit" name="Tweet" value="Tweet">
+<input type="submit" name="submit" value="submit">
 </form>
 <%end%>
