--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -1,7 +1,13 @@
-<a href="/tweets">Fwitter Feed</a> <a href="/users/<%=@user.slug%>">Your Tweets</a> <a href="/logout">Logout</a>
-<h2>Edit Tweet</h2>
-<form method="post" action="/tweets/<%=@tweet.id%>">
-  <input id="hidden" type="hidden" name="_method" value="patch">
-  <input type="text" name="tweet[content]" value="<%=@tweet.content%>" id="content">
-  <input type="submit" value="submit">
-</form>
+<div class="jumbotron">
+	<div class="wrapper">
+	  <div class="content">
+			<br></br>
+      <h2>EDIT TWEET</h2>
+      <form method="post" action="/tweets/<%=@tweet.id%>">
+        <input id="hidden" type="hidden" name="_method" value="patch">
+        <input type="text" name="tweet[content]" value="<%=@tweet.content%>" id="content">
+        <input type="submit" value="Edit">
+      </form>
+    </div>
+  </div>
+</div>
