--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,23 +1,60 @@
-<h2>Welcome, <%= @user.username.capitalize %></h2>
-<a href="/users/<%=@user.slug%>">Your Tweets</a>
-<a href="/logout">Logout</a>
-<br></br>
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
 <% end %>
-<h3>Fwitter Feed</h3>
-<form action="/tweets/new" method="get">
-  <input type="submit" value="New Tweet">
-</form>
-<% @tweets.each {|tweet| %>
-  <p><%=tweet.content%><p>
-  <p>tweeted by: <a href="/users/<%=tweet.user.slug%>"><%=tweet.user.username%></a></p>
-  <form action="/tweets/<%=tweet.id%>/edit" method="get">
-    <input type="submit" value="Edit Tweet">
-  </form>
-  <form action="/tweets/<%=tweet.id%>/delete" method="post">
-    <input id="hidden" type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete Tweet">
-  </form>
-  <br></br>
-<% } %>
+
+<br></br>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-sm-4 well">
+      <div class="well">
+        <h4>Welcome, <%= @user.username.capitalize %></h4>
+      </div>
+      <div class="well">
+        <img src="/images/fwitter2.png" class="img-circle" height="65" width="65" alt="Fwitter-Logo">
+      </div>
+
+    </div>
+    <div class="col-sm-8">
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel panel-default text-left">
+            <div class="panel-body">
+              <form method="post" action="/tweets">
+                <p contenteditable="true"><input class="tweet" type="text" name="tweet[content]" id="content"></p>
+                <input type="submit" class="btn btn-primary btn-sm" value="Tweet It!">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <% @tweets.each {|tweet| %>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="well">
+             <p><a href="/users/<%=tweet.user.slug%>"><%=tweet.user.username%></a></p>
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="well">
+              <p><%=tweet.content%></p>
+              <div class="row">
+                <div class="col-sm-6">
+                  <form action="/tweets/<%=tweet.id%>/edit" method="get">
+                    <input type="submit" class="btn btn-default btn-sm" value="Edit">
+                  </form>
+                </div>
+                <div class="col-sm-6">
+                  <form action="/tweets/<%=tweet.id%>/delete" method="post">
+                    <input id="hidden" type="hidden" name="_method" value="DELETE">
+                    <input type="submit" class="btn btn-default btn-sm" value="Delete">
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% } %>
+  </div>
+</div>
