--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,8 +1,14 @@
-<a href="/tweets">Fwitter Feed</a> <a href="/users/<%=@user.slug%>">Your Tweets</a> <a href="/logout">Logout</a>
-<h2>New Tweet</h2>
-<form method="post" action="/tweets">
-  <label for="content">Content:</label>
-  <input type="text" name="tweet[content]" id="content">
-  <br></br>
-  <input type="submit" value="submit">
-</form>
+<div class="jumbotron">
+	<div class="wrapper">
+	  <div class="content">
+			<br></br>
+      <h2>NEW TWEET</h2>
+      <form method="post" action="/tweets">
+        <label for="content">Content:</label>
+        <input type="text" name="tweet[content]" id="content">
+        <br></br>
+        <input type="submit" value="Tweet It!">
+      </form>
+    </div>
+  </div>
+</div>
