--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,17 @@
-<h3>Login</h3>
-<form method="post" action="/login">
-	<label for="username">Username:</label>
-	<input type="text" name="username" id="username">
-	<label for="password">Password:</label>
-	<input type="password" name="password" id="password">
-	<br></br>
-	<input type="submit" value="submit">
-</form>
-<br></br>
-Haven't got an account? <a href="/signup">Signup here.</a>
+<div class="jumbotron">
+	<div class="wrapper">
+	  <div class="content">
+			<br></br>
+			<h3><strong>SIGN IN</strong></h3><br></br>
+			<form method="post" action="/login">
+				<label for="username">Username:</label>
+				<input type="text" name="username" id="username"><br></br>
+				<label for="password">Password:</label>
+				<input type="password" name="password" id="password"><br></br>
+				<input type="submit" class="btn btn-primary btn-sm" value="Sign In">
+			</form>
+			<br></br>
+			Haven't got an account? <a href="/signup">Sign up here.</a>
+		</div>
+	</div>
+</div>
