--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,17 +1,56 @@
-<a href="/tweets">Fwitter Feed</a> <a href="/logout">Logout</a>
-<h2><%=@user.username.capitalize%>'s Tweets</h2>
-<form action="/tweets/new" method="get">
-  <input type="submit" value="New Tweet">
-</form>
-<% @user.tweets.each {|tweet| %>
-  <p><%=tweet.content%><p>
-  <p>Tweeted by: <%= tweet.user.username %></p>
-  <form action="/tweets/<%=tweet.id%>/edit" method="get">
-    <input type="submit" value="Edit Tweet">
-  </form>
-  <form action="/tweets/<%=tweet.id%>/delete" method="post">
-    <input id="hidden" type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="Delete Tweet">
-  </form>
-  <br></br>
-<% } %>
+<br></br>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-sm-4 well">
+      <div class="well">
+        <h4><%=@user.username.capitalize%>'s Tweets</h4>
+      </div>
+      <div class="well">
+        <img src="/images/fwitter2.png" class="img-circle" height="65" width="65" alt="Fwitter-Logo">
+      </div>
+
+    </div>
+    <div class="col-sm-8">
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="panel panel-default text-left">
+            <div class="panel-body">
+              <form method="post" action="/tweets">
+                <p contenteditable="true"><input type="text" class="tweet" name="tweet[content]" id="content"></p>
+                <input type="submit" class="btn btn-primary btn-sm" value="Tweet It!">
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <% @user.tweets.each {|tweet| %>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="well">
+             <p><%= tweet.user.username %></p>
+            </div>
+          </div>
+          <div class="col-sm-9">
+            <div class="well">
+              <p><%=tweet.content%></p>
+              <div class="row">
+                <div class="col-sm-6">
+                  <form action="/tweets/<%=tweet.id%>/edit" method="get">
+                    <input type="submit" class="btn btn-default btn-sm" value="Edit">
+                  </form>
+                </div>
+                <div class="col-sm-6">
+                  <form action="/tweets/<%=tweet.id%>/delete" method="post">
+                    <input id="hidden" type="hidden" name="_method" value="DELETE">
+                    <input type="submit" class="btn btn-default btn-sm" value="Delete">
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      <% } %>
+  </div>
+</div>
