--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,13 +1,19 @@
-<h3>Sign Up</h3>
-<form method="post" action="/signup">
-	<label for="username">Username:</label>
-	<input type="text" name="username" id="username">
-	<label for="email">Email:</label>
-	<input type="text" name="email" id="email">
-	<label for=“password”>Password:</label>
-	<input type="password" name="password" id="password">
-	<br></br>
-	<input type="submit" value="submit">
-</form>
-<br></br>
-Already have an account? <a href="/login">Login here.</a>
+<div class="jumbotron">
+	<div class="wrapper">
+	  <div class="content">
+			<br></br>
+			<h3><strong>SIGN UP</strong></h3><br></br>
+			<form method="post" action="/signup">
+				<label for="username">Username:</label>
+				<input type="text" name="username" id="username"><br></br>
+				<label for="email">Email:</label>
+				<input type="text" name="email" id="email"><br></br>
+				<label for=“password”>Password:</label>
+				<input type="password" name="password" id="password"><br></br>
+				<input type="submit" class="btn btn-primary btn-sm" value="submit">
+			</form>
+			<br></br>
+			Already have an account? <a href="/login">Sign in here.</a>
+		</div>
+	</div>
+</div>
