--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -25,7 +25,7 @@
         </div>
       </div>
 
-      <% @user.tweets.each {|tweet| %>
+      <% @tweets.each {|tweet| %>
         <div class="row">
           <div class="col-sm-3">
             <div class="well">
