--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -35,19 +35,21 @@
           <div class="col-sm-9">
             <div class="well">
               <p><%=tweet.content%></p>
-              <div class="row">
-                <div class="col-sm-6">
-                  <form action="/tweets/<%=tweet.id%>/edit" method="get">
-                    <input type="submit" class="btn btn-default btn-sm" value="Edit">
-                  </form>
+              <% if @user == tweet.user %>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <form action="/tweets/<%=tweet.id%>/edit" method="get">
+                      <input type="submit" class="btn btn-default btn-sm" value="Edit">
+                    </form>
+                  </div>
+                  <div class="col-sm-6">
+                    <form action="/tweets/<%=tweet.id%>/delete" method="post">
+                      <input id="hidden" type="hidden" name="_method" value="DELETE">
+                      <input type="submit" class="btn btn-default btn-sm" value="Delete">
+                    </form>
+                  </div>
                 </div>
-                <div class="col-sm-6">
-                  <form action="/tweets/<%=tweet.id%>/delete" method="post">
-                    <input id="hidden" type="hidden" name="_method" value="DELETE">
-                    <input type="submit" class="btn btn-default btn-sm" value="Delete">
-                  </form>
-                </div>
-              </div>
+              <% end %>
             </div>
           </div>
         </div>
