--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,4 +1,4 @@
-<p> Tweeting <%= @user.username %>
+<p> Tweets by <%= @user.username %>
 <% @user.tweets.each do |tweet| %>
 
     <%= tweet.content %>
