--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -5,6 +5,6 @@
   <label for="content">Content</label>
   <input type="text" id="content" name="content">
 
-    <input type="submit" value="Create Tweet">
+    <input type="submit" value="submit">
 
 </form>
