--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -9,10 +9,13 @@
   <label for="password">Password</label>
   <input type="text" id="password" name="password">
 
-    <input type="submit" value="Log In">
+    <input type="submit" value="submit">
 
 
 </form>
+
+
+
 
 
 
