--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,6 @@
-<h1>Create Tweet</h1>
+<h1>Create Topic</h1>
 <form action="/new" method="post">
-  <p>Tweet! Tweet! <input type="text" name="content" id="content"></p>
+  <p>Pick your topic <input type="text" name="content" id="content"></p>
   <br>
   <input type="submit" value="submit">
 </form>
