Undo "first commit" mistake

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to In A Flash</h1>
+<h1>Welcome to Fwitter</h1>
 
 <form action="/login" method="POST" >
   <p>Username: <input type="text" name="username"></p>
