--- a/app/views/users/signup.erb
+++ b/app/views/users/signup.erb
@@ -1,7 +1,7 @@
 <h3>Sign Up</h3>
 <form action="/signup" method="POST">
 	<p><input type="text" name="username" placeholder="Username"></p>
-	<p><input type="text" name="email" placeholder="Email"></p>
+	<p><input type="email" name="email" placeholder="Email"></p>
 	<p><input type="password" name="password" placeholder="Password"></p>
 	<p><input type="submit" value="Sign Up"></p>
 </form>
