--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,5 +1,7 @@
 <h1>Welcome, <%= current_user.username %></h1>
 
+<h2>Your tweets:</h2>
+
 <% @tweets.each do |tweet| %>
   <p><%= tweet.content %></p>
 <% end %>
