--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,7 +1,10 @@
 <h1>Your Tweet</h1>
 
-<p><%= @tweet.content %></p>
+  <p><%= @tweet.content %></p>
 
-<p><a href="/tweets/<%= @tweet.id %>/delete">Delete Tweet</a></p>
+<form action="/tweets/<%= @tweet.id %>/delete" method="POST">
+  <input type="submit" value="Delete Tweet">
+</form>
+
 <p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
 <p><a href="/logout">Log Out</a></p>
