--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,4 +4,5 @@
 	<input type="text" name="username" placeholder="Username">
 	<input type="email" name="email" placeholder="you@email.com">
 	<input type="password" name="password" placeholder="Password">
+	<input type="submit" value="Sign Up!">
 </form>
