--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,10 @@
 <body>
 	<ul>
 		<li><a href="/">Home</a></li>
+		<li><a href="/login">Log In</a></li>
 		<li><a href="/signup">Signup</a></li>
+		<li><a href="/logout">Log Out</a></li>
+		<li><a href="/tweets/new">New Tweet</a></li>
 	</ul>
 
 	<%= yield %>
