--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,2 +1,7 @@
 <h4><%= @user.username %> tweeted:</h4>
 <p><%= @tweet.content %></p>
+
+<p><a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a></p>
+<form action="/tweets/<%= @tweet.id %>/delete" method="GET">
+	<input type="submit" value="Delete Tweet">
+</form>
