--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Sign Up</h1>
 
-<form action="/register" method="POST">
+<form action="/signup" method="POST">
 	<input type="text" name="username" placeholder="Username">
 	<input type="email" name="email" placeholder="you@email.com">
 	<input type="password" name="password" placeholder="Password">
