--- a/app/views/users/failure.erb
+++ b/app/views/users/failure.erb
@@ -1,2 +1,2 @@
 <h1>Action failed!</h1>
-<p>It seems there was a problem. Please return to <a href="/">the home page</a> and try again.</p>
+<p>It seems there was a problem. Please return to the <a href="/">home page</a> and try again.</p>
