--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,6 +1,6 @@
-<h1>Your Tweet</h1>
+<h1>Tweet</h1>
 
-  <p><%= @tweet.content %></p>
+<p><%= @tweet.user.username %>: <%= @tweet.id %>: <%= @tweet.content %></p>
 
 <form action="/tweets/<%= @tweet.id %>/delete" method="POST">
   <input type="submit" value="Delete Tweet">
