--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -2,7 +2,8 @@
 
 <p><%= @tweet.user.username %>: <%= @tweet.id %>: <%= @tweet.content %></p>
 
-<form action="/tweets/<%= @tweet.id %>/delete" method="POST">
+<form action="/tweets/<%= @tweet.id %>" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
 
