--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,6 +1,6 @@
 <h2>Post a new Tweet</a>
 
-  <form action = "/tweets/new" method = "post">
+  <form action = "/tweets" method = "post">
     <input type = "text" name = "content" id = "content">
     <input type = "submit" value = "submit">
   </form>
