--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,5 +1,5 @@
-<h2>Welcome, <%=current_user.username%></h2>
-<a href = "/users/<%=current_user.slug%>">View your tweets</a><br>
+<h2>Welcome, <%=@current_user.username%></h2>
+<a href = "/users/<%=@current_user.slug%>">View your tweets</a><br>
 <a href = "/logout">Log Out</a>
 
 <ul>
