--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -2,7 +2,7 @@
 <a href = "/logout">Log Out</a>
 
 <ul>
- <%current_user.tweets.each do |t| %>
+ <%@current_user.tweets.each do |t| %>
    <li><a href = "/tweets/<%=t.id%>"><%=t.content%></a></li>
  <%end%>
 </ul>
