--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -5,4 +5,6 @@
   <input id = "hidden" type = "hidden" name = "_method" value = "patch">
   <input type = "text" name = "content" value = "<%=@tweet.content%>" id = "content"><br>
   <input type = "submit" value = "submit">
-</form>
+</form><br>
+
+<a href = "/tweets">Back to Tweets</a>
