--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,6 @@
 <h2>Your Tweets: </h2>
-<a href = "/logout">Log Out</a>
+<a href = "/logout">Log Out</a><br>
+<a href = "/tweets/new">New Tweet</a>
 
 <ul>
  <%@current_user.tweets.each do |t| %>
