--- a/app/views/users/create_login.erb
+++ b/app/views/users/create_login.erb
@@ -2,6 +2,11 @@
 
 
 <form method="post" action="/signup">
-    
-    
+   <label for="username">Username</label>
+    <input id="username" name="username">
+    <label for="email">Email</label>
+    <input id="email" name="email">
+    <label for="password">Password</label>
+    <input id="password" name="password_digest">
+    <input type="submit" id="submit">
 </form>
