--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,6 @@
 <h1>Create Tweet</h1>
+<form action="/tweets" method="post">
+    <input type="text" name="tweet[content]" id="content">
+    <input type="submit" id="submit" name="submit" value="Submit">
+    
+</form>
