--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,3 +1,8 @@
 <h1>Show Tweet</h1>
 <h3><%= @tweet.user %></h3>
 <p><%= @tweet.content %> (<a href = "/tweets/<%=@tweet.id%>/edit">edit</a>)</p>
+
+
+<form method="post" action="/tweets/<%=@tweet.id%>/delete"><input type="submit" name="delete" value="Delete Tweet"></form>
+
+<form method="get" action="/tweets/<%=@tweet.id%>/edit"><input type="submit" name="edit" value="Edit Tweet"></form>
