--- a/app/views/users/create_login.erb
+++ b/app/views/users/create_login.erb
@@ -7,6 +7,6 @@
     <label for="email">Email</label>
     <input id="email" name="email">
     <label for="password">Password</label>
-    <input id="password" name="password_digest">
+    <input type="password" id="password" name="password">
     <input type="submit" id="submit">
 </form>
