--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,8 @@
 <h1>Log In</h1>
+<form method="post" action="/login">
+    <label for="username">Username:</label>
+    <input name="username" id="username">
+    <label for="password">Password:</label>
+    <input type = "password" name="password" id="password">
+    <input type="submit" value = "Log In" id="submit">
+</form>
