--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,15 +3,15 @@
 <body>
 
 <div>
-<a>Home</a>
+<a href="/">Home</a>
 <% if !logged_in? %>
 
-<a>Log In</a>
-<a>Sign Up</a>
+<a href="/login">Log In</a>
+<a href="/signup">Sign Up</a>
 
 <% else %>
 
-<a>Log Out</a>
+<a href="/logout">Log Out</a>
 
 <% end %>
 </div>
