--- a/app/views/tweets.erb
+++ b/app/views/tweets.erb
@@ -1,3 +1,7 @@
 <h1>Welcome, to Fwitter</h1>
 
+<% @tweets.each do |tweet| %>
+  <p><%=  tweet.content %> <p>
+<% end %>
+
 <a href="/logout">Log Out</a>
