--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Fwitter | Sign Up</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
     <h1>Sign Up for Fwitter</h1>
 
-    <form action="/login" method="post">
+    <form action="/signup" method="post">
       Username: <br><input type="text" name="username" size="50" ></input><br><br>
-      Email: <br><input type="text" name="username" size="50" ></input><br><br>
+      Email: <br><input type="text" name="email" size="50" ></input><br><br>
       Password: <br><input type="password" name="password" size="50" ></input><br><br>
       <input type="submit" value="Sign Up">
     </form>
