add logic preventing logged in users from viewing sign up page

--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,1 +1,17 @@
-"hello login"
+<!DOCTYPE html>
+<html>
+ <head>
+  <meta charset="UTF-8">
+  <title>Fwitter | Log In</title>
+ </head>
+ <body>
+
+  <h1>Log In Below:</h1>
+
+  <form action="/sessions" method="post">
+    Username: <br><input type="text" name="username" size="50" ></input><br><br>
+    Password: <br><input type="password" name="password" size="50" ></input><br><br>
+    <input type="submit" value="Log In">
+  </form>
+  </body>
+</html>
