--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,10 +8,10 @@
 
   <h1>Log In Below:</h1>
 
-  <form action="/sessions" method="post">
+  <form action="/login" method="post">
     Username: <br><input type="text" name="username" size="50" ></input><br><br>
     Password: <br><input type="password" name="password" size="50" ></input><br><br>
-    <input type="submit" value="Log In">
+    <input type="submit" value="submit">
   </form>
   </body>
 </html>
