refactor code utilizing helpers

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,15 @@
-<h1>Welcome, to Fwitter</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fwitter</title>
+  </head>
+
+  <body>
+    <h1>Welcome to Fwitter</h1>
+
+    <img src="http://i.imgur.com/MZnHd4w.jpg" alt="Just as good as Twitter" height="300">
+
+    <p><a href='/signup'>Sign Up</a></p>
+    <p><a href = '/login'>Log In</a></p>
+  </body>
+</html>
