--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,7 +6,7 @@
  </head>
  <body>
 
-  <h1>Log In Below:</h1>
+  <h1>Log into Fwitter</h1>
 
   <form action="/login" method="post">
     Username: <br><input type="text" name="username" size="50" ></input><br><br>
