--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,12 @@
-"hello show tweets"
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fwitter | <%= @user.username %></title>
+  </head>
+  <body>
+    <h1>The Deep Thoughts of <%= <%= @user.username %></h1>
+    <ul style="list-style: none;"><% @tweets.each do |tweet| %>
+      <li><%= tweet.content %></li>
+      <%end%></ul>
+  </body>
+</html>
