--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,3 @@
-<h1>Welcome, <%= User.find_by(id: session[:id]).username %></h1>
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,8 +5,6 @@
   </head>
 
   <body>
-    <h1>Welcome, <%= User.find_by(id: session[:id]).username %></h1>
-
-
+    <h1>Welcome, <%= @user.username %>!</h1>
   </body>
 </html>
