--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,1 +1,9 @@
-"Hello-create tweets"
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fwitter | New Tweet</title>
+  </head>
+  <body>
+    
+  </body>
+</html>
