--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -5,6 +5,7 @@
     <title>Fwitter | Sign Up</title>
   </head>
   <body id="page-top">
+    <h1>Fwitter</h1><br>
     <h1>Sign Up for Fwitter</h1>
 
     <form action="/signup" method="post">
