--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -4,6 +4,11 @@
     <title>Fwitter | New Tweet</title>
   </head>
   <body>
-    
+    <h1>Fwitter</h1>
+    <form action="/tweets" method="post">
+      Enter new tweet here (max. 140 chars):<p><textarea type="text" id="content" name="content" maxlength = "140" rows="3" cols="100"></textarea>
+      <br><br>
+      <input type="submit" value='submit'>
+    </form>
   </body>
 </html>
