--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -5,7 +5,7 @@
   </head>
 
   <body>
-    <h1>Welcome, @<%= @user.username %>!</h1></br>
+    <h1>Fwitter</h1><p>Welcome, @<%= @user.username %>!</p></br>
     <ul style="list-style: none;"><% Tweet.all.each do |tweet| %>
       <li><h2>@<%= User.find(tweet.user_id).username %></h2></li>
       <li><p><%= tweet.content %></p></li>
