--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,1 +1,15 @@
-"Hello-edit tweets"
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fwitter | Edit Tweet</title>
+  </head>
+  <body>
+    <h1>Fwitter</h1>
+    <p>Edit your tweet here:</p>
+    <form action="/tweets" method="post">
+      <p><textarea type="text" id="content" name="content" maxlength = "140" rows="3" cols="100" value="<%= @tweet.content %>"><%= @tweet.content %></textarea>
+      <br><br>
+      <input type="submit" value='submit'>
+    </form>
+  </body>
+</html>
