--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -6,7 +6,8 @@
   <body>
     <h1>Fwitter</h1>
     <p>Edit your tweet here:</p>
-    <form action="/tweets" method="post">
+    <form action="/tweets/<%= @tweet.id %>" method="post">
+      <input id="hidden" type="hidden" name="_method" value="patch">
       <p><textarea type="text" id="content" name="content" maxlength = "140" rows="3" cols="100" value="<%= @tweet.content %>"><%= @tweet.content %></textarea>
       <br><br>
       <input type="submit" value='submit'>
