--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -8,6 +8,13 @@
     <p><b>@<%= User.find(@tweet.user_id).username %></b></p>
     <p><%= @tweet.content %></p>
     <br>
-    <input type="submit" value='Edit Tweet'> <input type="submit" value='Delete Tweet'>
+    <form action="/tweets/<%= @tweet.id %>/edit">
+      <input type="submit" value="Edit Tweet">
+    </form>
+
+    <form action="/tweets/<%= @tweet.id %>/delete" method="post">
+      <input id="hidden" type="hidden" name="_method" value="delete">
+      <input type="submit" value="Delete Tweet">
+    </form>
   </body>
 </html>
