--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -7,14 +7,16 @@
     <h1>Fwitter</h1>
     <p><b>@<%= User.find(@tweet.user_id).username %></b></p>
     <p><%= @tweet.content %></p>
-    <br>
+
     <form action="/tweets/<%= @tweet.id %>/edit">
       <input type="submit" value="Edit Tweet">
     </form>
-
+    <br>
     <form action="/tweets/<%= @tweet.id %>/delete" method="post">
       <input id="hidden" type="hidden" name="_method" value="delete">
-      <input type="submit" value="Delete Tweet">
+      <input type="hidden" name="content">
+    <input type="submit" value="Delete Tweet">
+
     </form>
   </body>
 </html>
