format display to make more user friendly

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -9,6 +9,9 @@
       Enter new tweet here (max. 140 chars):<p><textarea type="text" id="content" name="content" maxlength = "140" rows="3" cols="100"></textarea>
       <br><br>
       <input type="submit" value='submit'>
+      <form action="/tweets">
+        <input type="submit" value="cancel">
+      </form>
     </form>
   </body>
 </html>
