--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,9 +5,14 @@
   </head>
   <body>
     <h1>Fwitter</h1>
-    <p><b>@<%= User.find(@tweet.user_id).username %></b></p>
-    <p><%= @tweet.content %></p>
-
+    <p>@<b><%= User.find(@tweet.user_id).username %></b> • <%= @tweet.created_at.strftime("%b %d, %Y") %></p>
+    <h2><%= @tweet.content %></h2>
+    <p><i>Last updated on <%= @tweet.updated_at.strftime("%c %Z") %></i></p>
+    <br>
+    <form action="/tweets">
+      <input type="submit" value="Go Back to Tweets">
+    </form>
+    <br>
     <form action="/tweets/<%= @tweet.id %>/edit">
       <input type="submit" value="Edit Tweet">
     </form>
