--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -5,11 +5,12 @@
   </head>
 
   <body>
-    <h1>Fwitter</h1><p>Welcome, @<%= @user.username %>!</p></br>
-    <ul style="list-style: none;"><% Tweet.all.each do |tweet| %>
-      <li><h2>@<%= User.find(tweet.user_id).username %></h2></li>
-      <li><p><%= tweet.content %></p></li>
-      <br></br>
+    <h1>Fwitter</h1><p>Welcome, @<%= @user.username %>! (<a href='/logout'>logout</a>)</h1>
+    <h2>Tweets | <a href='/tweets/new'>make a tweet</a></h2>
+
+    <ul style="list-style: none;"><% Tweet.all.reverse.each do |tweet| %>
+      <li><p style="font-size:160%;">@<%= User.find_by_id(tweet.user_id).username %>: <a href="/tweets/<%= tweet.id %>"><%= tweet.content %></a></p></li>
+      <li><p style="font-size:80%;"><i><%= tweet.updated_at.strftime("%c %Z") %></i></p></li>
       <% end %></ul>
   </body>
 </html>
