--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -9,9 +9,9 @@
       Enter new tweet here (max. 140 chars):<p><textarea type="text" id="content" name="content" maxlength = "140" rows="3" cols="100"></textarea>
       <br><br>
       <input type="submit" value='submit'>
-      <form action="/tweets">
-        <input type="submit" value="cancel">
-      </form>
+      <br>
+      <br>
+      <button type="button"><a href='/tweets'>Go back</a></button>
     </form>
   </body>
 </html>
