--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -1,4 +1,4 @@
-<h3>Please Signup Below</h3>
+<h3>Please sign up below</h3>
 <form action="/signup" method="post">
   Username: <input type="text" name="username">
   Email: <input type="text" name="email">
