--- a/app/views/homepage.erb
+++ b/app/views/homepage.erb
@@ -1,1 +1,13 @@
-<p>Please <a href="/login">Login</a> or <a href="/signup/new">Signup</a></p>
+<% if Helpers.is_logged_in?(session) %>
+  <h3>Welcome <%= Helpers.current_user(session).username %></h3>
+  <p>
+    <a href="/tweet">New Tweet</a><br>
+    <a href="/tweets">View Tweets</a><br>
+    
+    <a href="/logout">Log Out</a>
+  </p>
+<% else %>
+  <p>
+    Please <a href="/login">Log In</a> or <a href="/signup">Sign Up</a>
+  </p>
+<% end %>
