--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -1,8 +1,5 @@
 <h3>Please Log In</h3>
 <form action="/login" method="post">
-  <p>
-    Username: <input type="text" name="username"><br>
-    Password: <input type="text" name="password">
-  </p>
+    Username: <input type="text" name="username"> Password: <input type="text" name="password">
   <input type="submit" value="Log In">
 </form>
