--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,4 @@
 <h1> Welcome to Fwitter </h1>
 <a href="/signup">Sign Up</a></br>
-<a href="/login">Log in</a>
+<a href="/login">Log in</a></br>
+<a href="/logout"> LogOut</a>
