--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,6 +1,6 @@
 <h1> User Login </h1>
 <form method="post" action="/login">
-  <input type="text" name="username">
-  <input type="password" name="password">
-  <input type="submit" value="submit">
+  Username:<input type="text" name="username"></br>
+  Password:<input type="password" name="password"></br>
+<input type="submit" value="submit">
 </form>
