--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,7 +1,7 @@
+<h1>New Tweet:</h1>
+
 <form method="POST" action="/tweets">
   <label for="content">Tweet:</label>
   <input type="text" name="content">
-  <button type="submit">submit</button>
-
-
+  <input type="submit" value="submit">
 </form>
