--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,12 +1,9 @@
-<% if @tweets == [] %>
-  <h3>Welcome, <% @username %>, you have no tweets yet</h3>
-  <a href="/tweet/new">New Tweet</a> or <a href="/logout">Log Out</a>
-<% else %>
-  <h3>Welcome, <% @username %>, here are your latest tweets!</h3>
-  <a href="/tweet">New Tweet</a> or <a href="/logout">Log Out</a><br>
-  <br>
-  <% @user.tweets.each do |tweet| %>
-    <a href="/tweets/<%= tweet.slug %>"><%= tweet.content %></a><br>
-    <br>
-  <% end %>
-<% end %>
+<h3><%= @username %></h3>
+<a href="/tweet/new">New Tweet</a>&nbsp&nbsp&nbsp-&nbsp&nbsp&nbsp<a href="/tweets/:id/edit">Edit Tweet</a>&nbsp&nbsp&nbsp-&nbsp&nbsp&nbsp<a href="/logout">Log Out</a><br>
+
+<h4><%= @tweet.content %></h4><br>
+
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
