--- a/app/views/tweets/user_tweets.erb
+++ b/app/views/tweets/user_tweets.erb
@@ -1,12 +1,12 @@
 <% if @tweets == [] %>
-  <h3>Welcome, <%= @username %>, there are no tweets yet...</h3>
+  <h3>Welcome, <%= @username %>, you have no tweets yet</h3>
   <a href="/tweet/new">New Tweet</a>&nbsp&nbsp&nbsp-&nbsp&nbsp&nbsp<a href="/logout">Log Out</a>
 <% else %>
-  <h3>Welcome, <%= @username %>, here are the latest tweets!</h3>
+  <h3>Welcome, <%= @username %>, here are your latest tweets!</h3>
   <a href="/tweet">New Tweet</a>&nbsp&nbsp&nbsp-&nbsp&nbsp&nbsp<a href="/logout">Log Out</a><br>
   <br>
-  <% @tweets.each do |t| %>
-    <a href="/tweets/<%= t.id %>"><%= t.content %></a><br>
+  <% @user.tweets.each do |tweet| %>
+    <a href="/tweets/<%= tweet.slug %>"><%= tweet.content %></a><br>
     <br>
   <% end %>
 <% end %>
