--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,6 @@
-<h3>Please Log In</h3>
+<p>
+Please Log In or <a href="/signup">Sign Up</a><br>
+</p>
 <form action="/login" method="post">
     Username: <input type="text" name="username">
     Password: <input type="text" name="password">
