--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,3 @@
 <h2>Welcome to Fwitter!</h2>
-<h3><a href="/users/login">Log In</a></h3>
-<h3><a href="/users/signup">Sign Up</a></h3>
+<h3><a href="/login">Log In</a></h3>
+<h3><a href="/signup">Sign Up</a></h3>
