--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,1 +1,14 @@
-<a href="/">Home</a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Fwitter</title>
+  </head>
+  <body>
+    <a href="/">Home</a>
+    <a href="/logout">Logout</a>
+    <a href="/signup">Signup</a>
+    <a href="/login">Login</a>
+    <%= yield %>
+  </body>
+</html>
