--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,1 +1,11 @@
 Make new user here
+
+<form action="/signup" method="post">
+  <label for="username">Username</label><br>
+  <input type="text" name="username" id="username"><br></br>
+  <label for="email">Email</label><br>
+  <input type="text" name="email" id="email"><br></br>
+  <label for="password">Password</label><br>
+  <input type="password" name="password" id="password"><br></br>
+  <input type="submit" value="Create User">
+</form>
