--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,6 +9,7 @@
     <a href="/logout">Logout</a>
     <a href="/signup">Signup</a>
     <a href="/login">Login</a>
+    <a href="/tweets/new">New Tweet</a>
     <%= yield %>
   </body>
 </html>
