--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,1 +1,11 @@
-<!-- a single tweet? -->
+<!-- a single tweet? --><h1>Tweet</h1>
+
+<p><%= @tweet.content %></p>
+<p>by @<%= @tweet.user.username %></p>
+
+<form action="/tweets/<%= @tweet.id %>" method="post">
+  <input type="hidden" id="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a>
