edit tweet views and controllers built

--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,6 +1,5 @@
 <form action="/tweets" method="post">
 	<label for="content">Content:</label><br>
-	<input type="text" name="content" id="content">
-
+	<textarea name="content" id="content" cols="30" rows="10"></textarea>
 	<input type="submit" name="Submit" id="submit">
 </form>
