all tests passing

--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -6,7 +6,8 @@
 </div>
 
 
-<form action="delete" method="post">
+<form action="/tweets/<%= @tweet.id %>/delete" method="post">
+	<input id="hidden" type="hidden" name="_method" value="DELETE">
 	<input type="submit" value="Delete Tweet" name="Delete Tweet">
 </form>
 
