--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,9 @@
 	<title></title>
 </head>
 <body>
+	<% if flash.has?(:message) %>
+	  <%= flash[:message] %>
+	<% end %><br>
 	<%= yield %>
 </body>
 </html>
