--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,4 @@
-<h1><a href="/signup" >Sign Up</a></h1>
-<h1><a href="/login" >Login</a></h1>
+<h1>"Welcome to Fwitter"</h1>
+
+<h2><a href="/signup" >Sign Up</a></h2>
+<h2><a href="/login" >Login</a></h2>
