--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,10 @@
+<h1>Welcome,</h1>
 <% if !@tweets.blank? %>
   <% for item in @tweets %>
-    <h5><%=item.user.username%></h5>
-    <h4><%=item.content%></h4>
+    <div class="">
+      <h3><%=item.user.username%></h3>
+      <h2><%=item.content%></h2>
+    </div>
   <% end %>
 <% else %>
   No Tweets Yet
