--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="POST">
   <p><input type="text" name="username" placeholder="Username:" ></p>
   <p><input type="password" name="password" placeholder="Password:" ></p>
-  <p><input type="submit" value="Log In"></p>
+  <p><input type="submit" value="submit"></p>
 </form>
