Added logout and index action

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,3 +1,5 @@
+<p>Welcome, You are now logged in and can see all of the tweets.</p>
+
 <p> Here are your tweets, <%= @user.username %>
 <% @user.tweets.each do |tweet| %>
     <p> <%= tweet.content %> </p>
