--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method="POST">
   <p> Username: <input type="text" name="username" placeholder="username"></p>
   <p> Password:<input type="password" name="password" placeholder="password"></p>
-  <input type="submit" value="login">
+  <input type="submit" id= "submit" value="login">
 </form>
