--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -8,5 +8,5 @@
   <p><input type="text" name="password" value=""></p>
   <br>
 
-  <input type="submit" name="" value="Log In">
+  <input type="submit" name="" id="submit" value="Log In">
 </form>
