--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,13 @@
 <p><%=@tweet.content%></p>
+<p> -by <%= @tweet.user.username %></p>
 <br>
 
-<form action="/tweets/<%=@tweet.id%>/edit">
+<form action="/tweets/<%=@tweet.id%>/edit" method="GET">
     <input type="submit" value ="Edit Tweet">
 </form>
 
-<form action="/tweets/<%=@tweet.id%>/delete">
+<form action="/tweets/<%=@tweet.id%>/delete" method="GET">
     <input type="submit" value ="Delete Tweet">
 </form>
+
+<a href="/tweets">Back</a>
