--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,8 @@
-<p>Welcome, You are now logged in and can see all of the tweets.</p>
+<p>Welcome, here you can see all of <%=@user.username%>'s tweets.</p>
 
-<p> Here are your tweets, <%= @user.username %>
-<% @user.tweets.each do |tweet| %>
-    <p> <%= tweet.content %> </p>
+<% @user.tweets.all.each do |tweet| %>
+    <a href="/tweets/<%=tweet.id%>"><p> <%= tweet.content %> </p></a>
+    <p> -by <%= tweet.user.username %></p>
 <% end %>
+
+<p><a href="/">Back</a></p>
