--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -5,7 +5,9 @@
 <% end %>
 <h1>Log In</h1>
 <form action="/login" method="post">
-  <input type="text" name="username">
-  <input type="password" name="password">
+  <input type="text" name="username" placeholder="Username">
+  <br></br>
+  <input type="password" name="password" placeholder="Password">
+  <br></br>
   <input type="submit" value="submit">
 </form>
