--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,6 @@
-<p>Here are your tweets, <%=@user.username%>:</p>
+<p>Here are your tweets, <a href="/users/<%=@user.slug%>"><%=@user.username%></a>:</p>
 <ul>
   <%@user.tweets.each do |tweet|%>
-    <li><%=tweet.content%></li>
+    <li><a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a></li>
   <%end%>
 </ul>
