--- a/app/views/login.erb
+++ b/app/views/login.erb
@@ -3,5 +3,5 @@
   <br>
   <label>Password </label><input type="password" name="password">
   <br>
-  <input type="submit" value="Login">
+  <input type="submit" value="submit">
 </form>
