--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,5 +1,5 @@
 <form action="/tweets" method="post">
   <label>Content </label><input id="content" type="text" name="tweet[content]">
   <br>
-  <input type="submit" value="Post">
+  <input type="submit" id="submit" value="Post">
 </form>
