--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -2,5 +2,5 @@
   <input type="text" name="tweet[content]" id="content"
   value="<%= @tweet.content %>">
   <br>
-  <input type="submit" value="Update">
+  <input type="submit" id="submit" value="Update">
 </form>
