--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -3,15 +3,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title></title>
   </head>
   <body>
-    <ul>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/signup">Sign Up</a></li>
-      <li><a href="/logout">Logout</a></li>
-
-      <%= yield %>
-    </ul>
+    <div>
+      <a href="/login">Login</a>
+      <a href="/signup">Sign Up</a>
+      <a href="/logout">Logout</a>
+    </div>
+    <%= yield %>
   </body>
 </html>
