--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,5 +1,7 @@
+<a href="/tweets/new">New Tweet</a>
 <h2>Your tweets:</h2>
 
 <% @user.tweets.each do |tweet| %>
-  <p><%= tweet.content %></p>
+  <p><b><%= tweet.user.username %></b>: <a href="/tweets/<%= tweet.id %>"
+    ><%= tweet.content %></a></p>
 <% end %>
