--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,6 +1,7 @@
-<p><%= @user.username %>'s Fweets'
+<h2><%= @user.username %>'s Fweets</h2>
+
+<div class="list-group">
 <% @user.tweets.each do |tweet| %>
-  <div>
-    <%= tweet.content %>
-  </div>
+    <a class="list-group-item" href="/tweets/<%=tweet.id%>"><%= tweet.content %></a>
 <% end %>
+</div>
