--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Sinatra MVC</title>
+    <title>Welcome to Fwitter</title>
   </head>
-
   <body>
-    <h1>Index</h1>
-    <p> I love programming </p>
+    <h1>Welcome to Fwitter</h1>
+    <a href="/login">Login</a>
+    <a href="/signup">Sign Up</a>
   </body>
 </html>
