--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Welcome to Fwitter</title>
-  </head>
-  <body>
-    <h1>Welcome to Fwitter</h1>
-
-  </body>
-</html>
+<h2>Login</h2>
+<form action="/login" method="POST">
+  <h4>Username:</h4>
+  <input type="text" name="username">
+  <h4>Password:</h4>
+  <input type="text" name="password">
+  <input type="submit" value="submit" name="submit">
+</form>
