added helper method

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,6 +4,7 @@
 	<title>Fwitter</title>
 </head>
 <body>
+	<img class="logo" src="http://www.untoldentertainment.com/blog/img/2009_04_02/fwitter.jpg">
 	<%= yield %>
 </body>
 </html>
