passed logging in tests

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,14 @@
 <h3>Welcome to Fwitter! <br> Please login or sign up below</h3>
+
+<br><br>
+
+<form method="get" action="/login">
+
+	<input type="submit" name="log in" value="Log In">
+</form>
+
+
+<br>
+<form method="get" action="/signup">
+	<input type="submit" name="register" value="New User">
+</form>
