passed all tests

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -5,6 +5,10 @@
 </head>
 <body>
 	<img class="logo" src="http://www.untoldentertainment.com/blog/img/2009_04_02/fwitter.jpg">
+	<br><br>
+	<a href="/">Home</a> <a href="/tweets">Tweets</a> <a href="/tweets/new">New Tweet</a>
+	<br>
+	<br>
 	<%= yield %>
 </body>
 </html>
