--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,7 +6,10 @@
 <form method="post" action="/login">
 	
 	User Name: <input type="text" name="username" id="username"> 
-	Password: <input type="text" name="password" id="password">
+	Password: <input type="password" name="password" id="password">
 
 	<input type="submit" name="log in" value="submit">
 </form>
+
+<br><br>
+If you do not have an account please sign up: <a href="/signup">Sign up</a>
