--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -2,6 +2,6 @@
   <label><h2>Edit tweet</h2></label><br />
   <input type="text" id="content" name="content" value="<%= @tweet.content %>"> <br /> <br />
 
-  <input type="submit" value="Edit Tweet" />
+  <input type="submit" id="submit" value="Submit" />
 
 </form>
