--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -6,10 +6,10 @@
   </head>
   <body>
     This is the form to log in
-    <form action="/users" method="post">
-      <input type = "text" name = "user_name" >
+    <form action="/login" method="post">
+      <input type = "text" name = "username" >
       <input type = "password" name = "password">
-      <input type = "submit">
+      <input type = "submit" id = "submit" name = "submit">
     </form>
   </body>
 </html>
