--- a/app/views/create_tweet.erb
+++ b/app/views/create_tweet.erb
@@ -6,8 +6,8 @@
   </head>
   <body>
     <form action="/tweets/" method="post">
-      <input type = "text" name = "content[name]">
-      <input type = "submit">
+      <input type = "text" name = "content" id = "content">
+      <input type = "submit" name = "submit" id = "submit">
     </form>
   </body>
 </html>
