--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
 
     <h1>Welcome to Fwitter </h1>
-    <h3><a href = "/users/login">Sign In Here</a></h3>
+    <h3><a href = "/login">Sign In Here</a></h3>
     <h3><a href = "/signup"> Sign Up Here </a></h3>
