--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -5,5 +5,5 @@
 <a href="/tweets/<%= @tweet.id %>/edit">Edit Tweet</a><br>
 <form action="/tweets/<%= @tweet.id %>/delete" method="POST">
   <input id="hidden" type="hidden" name="_method" value="delete">
-  <input type="text" name="submit" value="Delete Tweet">
+  <input type="submit" name="submit" value="Delete Tweet">
 </form>
