--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,3 +1,4 @@
+<a href="/users/<%= @tweet.user.username %>"><h1><%= @tweet.user.username %>'s</h1></a>
 <h1>Tweet <%= @tweet.id %>:</h1>
 
 <p><%= @tweet.content %></p><br>
@@ -7,3 +8,5 @@
   <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" name="submit" value="Delete Tweet">
 </form>
+
+<a href="/tweets"><h4>Back to Tweet Index</h4></a>
