--- a/app/views/tweets/new.erb
+++ b/app/views/tweets/new.erb
@@ -1,3 +1,4 @@
+<h4><a href="/logout">Logout</a></h4>
 <form action="/tweets" method="POST">
    <label>Tweet Content:</label>
    <input type="text" name="content">
