--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -4,3 +4,5 @@
 	<input type="password" name="password" placeholder="Password:">
 	<input type="submit" value="submit">
 </form>
+
+<h4>New user?<a href="/signup">Sign Up Here</a></h4>
