--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,4 @@
 <div class='center'>
-  <h2>Welcome to Fwitter!</h2>
+  <h1 class='outline'>Welcome to Fwitter!</h1>
   <a href='/login'><button class='menu'>Login</button></a> | <a href='/signup'><button class='menu'>Sign-up</button></a>
-
 </div>
