--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,11 +1,10 @@
 <div class='center'>
-  <h2>Signup</h2>
+  <h1 class='outline'>Signup</h1>
   <form method='post' action='/signup'>
-    <input type='text' name='username' placeholder='Username'><br>
-    <input type='text' name='email' placeholder='Email'><br>
-    <input type='password' name='password' placeholder='Password'><br>
+    <input class='text' type='text' name='username' placeholder='Username'><br>
+    <input class='text' type='text' name='email' placeholder='Email'><br>
+    <input class='text' type='password' name='password' placeholder='Password'><br>
     <br>
-    <input type='submit' value='submit' class='button'>
+    <input class='submit' type='submit' value='submit' class='button'>
   </form>
-
 </div>
