--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,9 @@
 <div class='center'>
-  <h2>Login</h2>
+  <h1 class='outline'>Login</h1>
   <form method='post' action='/login'>
-    <input type='text' name='username' placeholder='Username'><br>
-    <input type='password' name='password' placeholder='Password'><br>
+    <input class='text' type='text' name='username' placeholder='Username'><br>
+    <input class='text' type='password' name='password' placeholder='Password'><br>
     <br>
-    <input type='submit' value='submit' class='button'>
+    <input class='submit' type='submit' value='submit' class='button'>
   </form>
-
 </div>
