Update tweets controller and tweets view

--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,5 @@
 <h1> All the Tweets </h1>
+<!--TODO: <h2> Welcome, <%= current_user.name %> --> 
 
 <% @tweets.each do |tweet| %>
   <li><!--TODO: add <%= tweet.user %> --> <a href="/tweets/<%= tweet.id %>"> <%= tweet.content %> </a></li>
